--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   },
   "dependencies": {
     "@tinymce/tinymce-vue": "^4.0.0",
-    "axios": "^0.20.0",
+    "axios": "^0.21.1",
     "core-js": "^3.7.0",
     "tesseract.js": "^2.1.4",
     "vue": "^3.0.0"
@@ -17,10 +17,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-typescript": "^4.5.8",
-    "@vue/cli-service": "~4.5.0",
+    "@vitejs/plugin-vue": "^1.2.1",
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
     "babel-eslint": "^10.1.0",
@@ -28,7 +25,8 @@
     "eslint-plugin-vue": "^7.0.0-0",
     "less": "^3.12.2",
     "less-loader": "^7.0.2",
-    "typescript": "~4.0.5"
+    "typescript": "~4.0.5",
+    "vite": "^2.1.5"
   },
   "eslintConfig": {
     "root": true,
