--- a/package.json
+++ b/package.json
@@ -9,24 +9,23 @@
   },
   "dependencies": {
     "@tinymce/tinymce-vue": "^4.0.0",
-    "axios": "^0.21.1",
-    "core-js": "^3.7.0",
-    "tesseract.js": "^2.1.4",
-    "vue": "^3.0.0"
+    "axios": "^1.1.3",
+    "core-js": "^3.26.0",
+    "tesseract.js": "^3.0.3",
+    "vue": "^3.2.45"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.6.1",
-    "@typescript-eslint/parser": "^4.6.1",
-    "@vitejs/plugin-vue": "^1.2.1",
-    "@vue/compiler-sfc": "^3.0.0",
-    "@vue/eslint-config-typescript": "^7.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.43.0",
+    "@vitejs/plugin-vue": "^3.2.0",
+    "@vue/eslint-config-typescript": "^11.0.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.13.0",
-    "eslint-plugin-vue": "^7.0.0-0",
-    "less": "^3.12.2",
-    "less-loader": "^7.0.2",
-    "typescript": "~4.0.5",
-    "vite": "^2.1.5"
+    "eslint": "^8.28.0",
+    "eslint-plugin-vue": "^9.7.0",
+    "less": "^4.1.0",
+    "less-loader": "^11.0.0",
+    "typescript": "~4.9.3",
+    "vite": "^3.2.4"
   },
   "eslintConfig": {
     "root": true,
